Sketch Board Project

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 <script>
   
   
-    let socket = io.connect('http://localhost:3000');
+    let socket = io.connect('https://sketch-board-project.netlify.app');
     </script>
 
 
