--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 <script>
   
   
-    let socket = io.connect('https://sketch-board-project.netlify.app');
+    let socket = io.connect('https://sketch-board-project-3uvzwkbmj-pulkitchopra.vercel.app ');
     </script>
 
 
