--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 <script>
   
   
-    let socket = io.connect('https://sketch-board-project-ls89.vercel.app');
+    let socket = io.connect('http://localhost:3000');
     </script>
 
 
